--- a/revenues-test/Read_Reconciliation_Sheets_15-16.ipynb
+++ b/revenues-test/Read_Reconciliation_Sheets_15-16.ipynb
@@ -212,22 +212,88 @@
     "    #         df.to_csv(filename)\n",
     "\n",
     "        print(filename)\n",
-    "        df_all = pd.concat([df_all, \\\n",
+    "         df_all = pd.concat([df_all, \\\n",
     "            pd.DataFrame({'company_name' : [name], \\\n",
     "                          'name_of_revenue_stream' : 'Sale Split', \\\n",
+    "                          'paid_to' : \"Myanmar Gems Enterprise\", \\\n",
     "                          'value_reported' : [df.loc[9,'Per Government.Final'][0]]})])\n",
     "        df_all = pd.concat([df_all, \\\n",
     "            pd.DataFrame({'company_name' : [name], \\\n",
-    "                          'name_of_revenue_stream' : 'Royalties', \\\n",
+    "                          'name_of_revenue_stream' : 'Sales Royalties', \\\n",
+    "                          'paid_to' : \"Myanmar Gems Enterprise\", \\\n",
     "                          'value_reported' : [df.loc[10,'Per Government.Final'][0]]})])\n",
     "        df_all = pd.concat([df_all, \\\n",
     "            pd.DataFrame({'company_name' : [name], \\\n",
     "                          'name_of_revenue_stream' : 'Emporium Fees', \\\n",
-    "                          'value_reported' : [df.loc[9,'Per Government.Final'][0]]})])\n",
+    "                          'paid_to' : \"Central Comittee\", \\\n",
+    "                          'value_reported' : [df.loc[25,'Per Government.Final'][0]]})])\n",
+    "        \n",
     "        df_all = pd.concat([df_all, \\\n",
     "            pd.DataFrame({'company_name' : [name], \\\n",
-    "                          'name_of_revenue_stream' : 'Other significant payments (> 50,000 USD)', \\\n",
-    "                          'value_reported' : [df.loc[17,'Per Government.Final'][0]]})])\n",
+    "                          'name_of_revenue_stream' : 'Other significant payments', \\\n",
+    "                          'paid_to' : \"Myanmar Gems Enterprise\", \\\n",
+    "                          'value_reported' : [df.loc[23,'Per Government.Final'][0]]})])\n",
+    "        \n",
+    "        \n",
+    "        df_all = pd.concat([df_all, \\\n",
+    "            pd.DataFrame({'company_name' : [name], \\\n",
+    "                          'name_of_revenue_stream' : 'Production Royalties', \\\n",
+    "                          'paid_to' : \"Myanmar Gems Enterprise\", \\\n",
+    "                          'value_reported' : [df.loc[7,'Per Government.Final'][0]]})])\n",
+    "        \n",
+    "        df_all = pd.concat([df_all, \\\n",
+    "            pd.DataFrame({'company_name' : [name], \\\n",
+    "                          'name_of_revenue_stream' : 'Production Royalties', \\\n",
+    "                          'paid_to' : \"Department of Mines\", \\\n",
+    "                          'value_reported' : [df.loc[8,'Per Government.Final'][0]]})])\n",
+    "        \n",
+    "        df_all = pd.concat([df_all, \\\n",
+    "            pd.DataFrame({'company_name' : [name], \\\n",
+    "                          'name_of_revenue_stream' : 'Permit Fees', \\\n",
+    "                          'paid_to' : \"Myanmar Gems Enterprise\", \\\n",
+    "                          'value_reported' : [df.loc[12,'Per Government.Final'][0]]})])\n",
+    "        \n",
+    "        \n",
+    "        df_all = pd.concat([df_all, \\\n",
+    "            pd.DataFrame({'company_name' : [name], \\\n",
+    "                          'name_of_revenue_stream' : 'Incentive Fees', \\\n",
+    "                          'paid_to' : \"Myanmar Gems Enterprise\", \\\n",
+    "                          'value_reported' : [df.loc[13,'Per Government.Final'][0]]})])\n",
+    "        \n",
+    "        \n",
+    "        df_all = pd.concat([df_all, \\\n",
+    "            pd.DataFrame({'company_name' : [name], \\\n",
+    "                          'name_of_revenue_stream' : 'Commercial Tax', \\\n",
+    "                          'paid_to' : \"Myanmar Gems Enterprise\", \\\n",
+    "                          'value_reported' : [df.loc[14,'Per Government.Final'][0]]})])\n",
+    "        \n",
+    "        \n",
+    "        df_all = pd.concat([df_all, \\\n",
+    "            pd.DataFrame({'company_name' : [name], \\\n",
+    "                          'name_of_revenue_stream' : 'Corporate Income Tax', \\\n",
+    "                          'paid_to' : \"Internal Revenue Department\", \\\n",
+    "                          'value_reported' : [df.loc[19,'Per Government.Final'][0]]})])\n",
+    "        \n",
+    "        \n",
+    "        df_all = pd.concat([df_all, \\\n",
+    "            pd.DataFrame({'company_name' : [name], \\\n",
+    "                          'name_of_revenue_stream' : 'Commercial Tax', \\\n",
+    "                          'paid_to' : \"Internal Revenue Department\", \\\n",
+    "                          'value_reported' : [df.loc[20,'Per Government.Final'][0]]})])\n",
+    "        \n",
+    "        \n",
+    "        df_all = pd.concat([df_all, \\\n",
+    "            pd.DataFrame({'company_name' : [name], \\\n",
+    "                          'name_of_revenue_stream' : 'Customs Duties', \\\n",
+    "                          'paid_to' : \"Customs Department\", \\\n",
+    "                          'value_reported' : [df.loc[21,'Per Government.Final'][0]]})])\n",
+    "        \n",
+    "        \n",
+    "        df_all = pd.concat([df_all, \\\n",
+    "            pd.DataFrame({'company_name' : [name], \\\n",
+    "                          'name_of_revenue_stream' : 'Sales Royalties', \\\n",
+    "                          'paid_to' : \"Internal Revenue Department\", \\\n",
+    "                          'value_reported' : [df.loc[22,'Per Government.Final'][0]]})])\n",
     "    #         print(df.columns)\n",
     "    except:\n",
     "        print(\"error parsing names from sheet \\\"\" + s + \"\\\"\")"
