--- a/revenues-test/Preparing Data 2015-16.ipynb
+++ b/revenues-test/Preparing Data 2015-16.ipynb
@@ -2752,9 +2752,7 @@
     "                       'target': 'Commercial Tax', 'value': 15000000 },\n",
     "                         \n",
     "                         {'source': 'Myanmar Gems Enterprise', 'type': 'entity',\n",
-    "                       'target': 'Corporate Income Tax', 'value': 53788313000 }]\n",
-    "\n",
-    "\"\"\"\n",
+    "                       'target': 'Corporate Income Tax', 'value': 53788313000 },\n",
     "                         \n",
     "                         {'source': 'State Contribution', 'target-type': 'entity','target-type': 'entity',\n",
     "                       'target': 'Ministry of Finance', 'value': 46833942000 },\n",
@@ -2768,7 +2766,7 @@
     "                         {'source': 'Commercial Tax', 'target-type': 'entity',\n",
     "                       'target': 'Internal Revenue Department', 'value': 15000000 }]\n",
     "\n",
-    "\"\"\"\n",
+    "\n",
     "\n",
     "append_dict_transfers_df = pd.DataFrame(append_dict_transfers)\n",
     "#links = pd.concat([links, append_dict_transfers_df])"
